[package]
name = "crab-errors-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
anyhow = "1.0.66"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
libsql = {version = "0.1.1", optional = true}
async-graphql = { version = "6.0.3" ,optional = true}


[features]
libsql_error = ["libsql"]
async_graphql  = ["async-graphql"]
