[package]
name = "crab-errors-rs"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
anyhow = "1.0.66"
strum_macros = "0.25.3"
strum = { version = "0.25.0", features = ["derive"] }
libsql = {version = "0.2.0", optional = true}
async-graphql = { version = "7.0.0" ,optional = true}
axum = {version = "0.7.3", optional = true}

[features]
libsql_error = ["libsql"]
async_graphql  = ["async-graphql"]
axum_error = ["axum"]
